--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,7 +1,9 @@
-# Use the latest Node.js 22 image
+# Use Node.js 22 (Current)
 FROM node:22-slim
 
-# Install FFmpeg and build essentials for native modules
+# Install system dependencies
+# ffmpeg: required for music
+# python3/make/g++: required if your dependencies need to compile native code
 RUN apt-get update && apt-get install -y \
     ffmpeg \
     python3 \
@@ -10,16 +12,16 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
-# Copy package files first for better caching
+# Copy package files from the sub-folder
 COPY omni-bot/package*.json ./
 
 # Install dependencies
 RUN npm install --production
 
-# Copy the rest of the application code
+# Copy the actual bot code
 COPY omni-bot/ .
 
-# Command to run the bot
+# Start the bot
 CMD [ "node", "index.js" ]
